xine-lib (1.1.16) 2008-??-??
  * Security fixes:
    - Integer overflows in the ffmpeg audio decoder and the CDDA server.
  * Fix reported compilation failures (with C++ programs).
  * Fix CDDB access in 64-bit builds.

xine-lib (1.1.15) 2008-08-14
  * Security fixes:
    - Fix crashes with various corrupted media files, including Ogg.
      (CVE-2008-3231)
      This includes a libfaad update from the 1.2 branch.
    - Delay V4L video frame preallocation until we know how large they'll be.
      (CVE-2008-5245)
    - Fix an exploitable ID3 heap buffer overflow.
      (CVE-2008-5234, vector 2)
    - Check for possible buffer overflow attempts in the Real demuxer.
      (CVE-2008-5235)
    - Use size_t for data length variables where there may be int overflows.
    - Add some checks for memory allocation failures.
      (CVE-2008-5233)
    - Fix crashes with MP3 files with metadata consisting only of separators.
      (CVE-2008-5248)
  * Use external ffmpeg and libfaad by default.
  * V4L: Don't segfault if asked for an input that doesn't exist.
  * Recognise AMR audio (normally found in 3GP files).
  * Recognise Snow video.
  * Xv deinterlacing didn't take the size of the deinterlaced image into
    account; on some chipsets, this would cause image corruption, while on
    others, there would be no problem.
  * V4L: only try and set the tuner if we're going to use it. Setting the tuner
    when using baseband video (CVBS, S-Video) breaks the input.

xine-lib (1.1.14) 2008-06-29
  * DVB changes:
    - Reacquire PIDs whenever a PMT is parsed. (Some channels' PIDs are
      changed on a regular basis.)
    - Recognise more stream formats (as defined in the broadcast PMT).
    - Allow automatic detection of more DVB tuning parameters.
    - Allow the GUI to be disabled.
    - Allow configuration of the location of channels.conf.
  * V4L: allow TV standard selection.
  * Allow input plugins to report MIME type information.